<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f3f3f3"
    tools:context=".HotelDetails">
    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backbtn"
            android:layout_width="40sp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:src="@drawable/back">

        </ImageView>
    </RelativeLayout>
    <TextView
        android:id="@+id/ShowHotelName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="116dp"
        android:layout_marginRight="20sp"
        android:text="HotelName"
        android:fontFamily="sans-serif-condensed-light"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>



    <TextView
        android:id="@+id/Area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="Area : "
        android:fontFamily="sans-serif-condensed-light"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ShowHotelName">

    </TextView>

    <TextView
        android:id="@+id/ShowHotelArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="HotelArea"
        android:fontFamily="sans-serif-condensed-light"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/Area"
        app:layout_constraintTop_toTopOf="@+id/Area">

    </TextView>

    <TextView
        android:id="@+id/Star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Star : "
        android:fontFamily="sans-serif-condensed-light"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Area">

    </TextView>

    <TextView
        android:id="@+id/ShowHotelStar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="HotelStar"
        android:fontFamily="sans-serif-condensed-light"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.021"
        app:layout_constraintStart_toEndOf="@+id/Star"
        app:layout_constraintTop_toBottomOf="@+id/ShowHotelArea">

    </TextView>

    <TextView
        android:id="@+id/Room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Number Of Room : "
        android:fontFamily="sans-serif-condensed-light"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.228"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Star">

    </TextView>

    <TextView
        android:id="@+id/ShowHotelRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Room"
        android:fontFamily="sans-serif-condensed-light"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/Room"
        app:layout_constraintTop_toTopOf="@+id/Room">

    </TextView>


</androidx.constraintlayout.widget.ConstraintLayout>